load("//bazel:defs.bzl", "compatible_with_rp2")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "pico_stdio_test",
    testonly = True,
    srcs = ["pico_stdio_test.c"],
    # Host doesn't support PICO_TIME_NO_ALARM_SUPPORT without pico_host_sdl.
    target_compatible_with = compatible_with_rp2(),
    deps = [
        "//src/rp2_common/pico_multicore",
        "//src/rp2_common/pico_stdlib",
        "//test/pico_test",
    ],
)
